finalize stylize cart item

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,7 @@
   <app-cart-item></app-cart-item>
   <app-cart-item></app-cart-item>
   <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
+  <app-cart-item></app-cart-item>
 </main>
