--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,10 +1,13 @@
-<div>
-    <img src="https://i.ebayimg.com/thumbs/images/g/BPUAAOSwLbNk6M18/s-l300.webp" alt="shirt_image ">
+<div class="cart-item">
+    <img class="item-image" src="{{item.image}}" alt="shirt_image ">
+    <p class="item-description">{{item.description}}</p>
     <div>⭐⭐⭐⭐⭐</div> 
-    <div>$54</div>
-    <div class="input-group mb-3">
+    <div class="item-price">{{item.price}}</div>
+    <dir class="item-stock">In Stock : <span>{{item.qty}}</span></dir>
+    Add To Cart
+    <div class="input-group mb-3 add-to-cart-ctrl">
         <button class="btn btn-outline-secondary" type="button">-</button>
-        <input type="text" class="form-control" placeholder="">
+        <input type="text" class="form-control" value="0">
         <button class="btn btn-outline-secondary" type="button">+</button>
     </div>
 </div>
