--- a/src/app/cart-item/cart-item.component.css
+++ b/src/app/cart-item/cart-item.component.css
@@ -26,7 +26,9 @@
 
 .item-stock{
     color: gray;
-    margin-bottom: 10px;
+    position: relative;
+    right: 20px;
+    
 }
 
 .add-to-cart-ctrl{
