--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,13 +1,19 @@
 <div class="cart-item">
     <img class="item-image" src="{{item.image}}" alt="shirt_image ">
     <p class="item-description">{{item.description}}</p>
-    <div>⭐⭐⭐⭐⭐</div> 
+    <ng-container [ngSwitch]="item.rating">
+        <div *ngSwitchCase="5">⭐⭐⭐⭐⭐</div> 
+        <div *ngSwitchCase="4">⭐⭐⭐⭐</div> 
+        <div *ngSwitchCase="3">⭐⭐⭐</div> 
+        <div *ngSwitchCase="2">⭐⭐</div> 
+        <div *ngSwitchCase="1">⭐</div> 
+    </ng-container>
     <div class="item-price">{{item.price}}</div>
-    <dir class="item-stock">In Stock : <span>{{item.qty}}</span></dir>
+    <dir class="item-stock">In Stock : <span>{{item.qty - inCart}}</span></dir>
     Add To Cart
     <div class="input-group mb-3 add-to-cart-ctrl">
-        <button class="btn btn-outline-secondary" type="button">-</button>
-        <input type="text" class="form-control" value="0">
-        <button class="btn btn-outline-secondary" type="button">+</button>
+        <button [disabled]="inCart === 0" class="btn btn-outline-secondary" type="button" (click)="updateCart(false)">-</button>
+        <input type="text" class="form-control" [(ngModel)]="inCart">
+        <button [disabled]="inCart === item.qty" class="btn btn-outline-secondary" type="button" (click)="updateCart(true)">+</button>
     </div>
 </div>
