Added currency pipe

--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -8,7 +8,7 @@
         <div *ngSwitchCase="2">⭐⭐</div> 
         <div *ngSwitchCase="1">⭐</div> 
     </ng-container>
-    <div class="item-price">{{item.price}}</div>
+    <div class="item-price">{{item.price | currency: 'USD'}}</div>
     <dir class="item-stock">In Stock : <span>{{item.qty - inCart}}</span></dir>
     Add To Cart
     <div class="input-group mb-3 add-to-cart-ctrl">
