--- a/src/app/cart-item/cart-item.component.css
+++ b/src/app/cart-item/cart-item.component.css
@@ -39,3 +39,11 @@
         text-align: center;
     }
 }
+
+.out-of-stock{
+    background-color: red;
+    color: white;
+    padding: 2px 5px;
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
