Add ebay logo and cart logo

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
 <app-header></app-header>
 <main>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
-  <app-cart-item></app-cart-item>
+  <app-cart-item *ngFor="let it of items" [item]="it" ></app-cart-item>
 </main>
