--- a/src/app/cart-item/cart-item.component.html
+++ b/src/app/cart-item/cart-item.component.html
@@ -1,20 +1,20 @@
 <div class="cart-item">
-    <img class="item-image" src="{{item.image}}" alt="shirt_image ">
-    <p class="item-description">{{item.description}}</p>
-    <ng-container [ngSwitch]="item.rating">
+    <img class="item-image" src="{{item?.image}}" alt="shirt_image ">
+    <p class="item-description">{{item?.description}}</p>
+    <ng-container [ngSwitch]="item?.rating">
         <div *ngSwitchCase="5">⭐⭐⭐⭐⭐</div> 
         <div *ngSwitchCase="4">⭐⭐⭐⭐</div> 
         <div *ngSwitchCase="3">⭐⭐⭐</div> 
         <div *ngSwitchCase="2">⭐⭐</div> 
         <div *ngSwitchCase="1">⭐</div> 
     </ng-container>
-    <div class="item-price">{{item.price | currency: 'USD'}}</div>
-    <dir *ngIf="inCart !== item.qty" class="item-stock">In Stock : <span>{{item.qty - inCart}}</span></dir>
-    <div *ngIf="inCart === item.qty" class="out-of-stock">Out Of Stock</div>
+    <div class="item-price">{{item?.price | currency: 'USD'}}</div>
+    <div *ngIf="inCart !== item?.qty" class="item-stock">In Stock : <span>{{item?.qty! - inCart}}</span></div>
+    <div *ngIf="inCart === item?.qty" class="out-of-stock">Out Of Stock</div>
     Add To Cart
     <div class="input-group mb-3 add-to-cart-ctrl">
         <button [disabled]="inCart === 0" class="btn btn-outline-secondary" type="button" (click)="updateCart(false)">-</button>
         <input type="text" class="form-control" [(ngModel)]="inCart">
-        <button [disabled]="inCart === item.qty" class="btn btn-outline-secondary" type="button" (click)="updateCart(true)">+</button>
+        <button [disabled]="inCart === item?.qty" class="btn btn-outline-secondary" type="button" (click)="updateCart(true)">+</button>
     </div>
 </div>
