--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<header>header works!</header>
+<header>
+    <div class="logo"></div>
+    <div class="cart_container">
+        <span class="cart_count">1</span>
+        <div class="cart_logo"></div>
+    </div>
+</header>
