--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
     <div class="logo"></div>
     <div class="cart_container">
-        <span class="cart_count">1</span>
+        <span class="cart_count">{{totalItemCart}}</span>
         <div class="cart_logo"></div>
     </div>
 </header>
